--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^14.3.2",
+    "firebase": "^9.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
