--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^17.0.14",
+    "@types/react-router-dom": "^5.3.3",
     "dotenv": "^14.3.2",
     "firebase": "^9.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "5"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
